@@ -3,7 +3,7 @@ AUX mozldap-6.0.4-pkgconfig.patch 552 RMD160 b7428141f1b064a56bc6732d67b57670a5e
 AUX nspr-m4.patch 1447 RMD160 fc7a95a21274cf7785b74296022d1413d27d25df SHA1 43a8dacf0c2b8e29232ca9e620992455ad73c24c SHA256 6fcb31a73e34a8187444e9469e118277d338c52c5c46b80d86f1f84439199915
 AUX nss-m4.patch 1446 RMD160 81f18f2170f590e46b6824347edfae623677e0bb SHA1 00c6acb1d55bad86a68d36a76e8c0816808fa630 SHA256 2322409a792cea0b235ee0ae2f8700111bd878008eac3c16db3f0654fd5398c5
 DIST mozldap-6.0.6.tar.gz 708821 RMD160 d932813f0b6f5808c8f0b255718a413d6a6e6ba5 SHA1 db7b8d845f8917638512ae92381675fe76432eff SHA256 3a7b94c6698e2acb91a577decee5eb6103f183d6b9833abb169124818ba80d06
-EBUILD mozldap-6.0.6-r1.ebuild 3807 RMD160 9031a94dc4aba69f3ac41f2b39d31501d81e8ba7 SHA1 44fa050fbe6c3c305817a3cc6c50dfb7da9c4534 SHA256 15ac59a0d988fcb7b59e3f985e1654149bc1aa2e9d45c02041f204f83b3af1b9
+EBUILD mozldap-6.0.6-r1.ebuild 3946 RMD160 81b355056f6a0654977fc610da640c15af506345 SHA1 e8bbd1f94c48fb52d26272f737a787ecd0b4543e SHA256 f1ae39794bd457333df9279f0d2e74ef2704735776aea3786512c6ee99e46a7b
 EBUILD mozldap-9999.ebuild 3594 RMD160 3062f1269bf98dada56a858f471bc8a7540a9cbf SHA1 b400b2914e4359591acae2070d9633c180e0a49f SHA256 8c663753e8adc9ee7bc075b2e12ba0d5528f64a6b05b84ae4d7fe2b8bba3c6e0
 MISC ChangeLog 1178 RMD160 33eef036dfe32c04a23e70659ff46ee6f5400a14 SHA1 3a6a04608a99c1f14f0f32ef66e9ac471800c90a SHA256 93e21c671aaeb2874874b1105b0a1f5e505f23c80487c773f3a12c44902854a6
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
