@@ -6,6 +6,7 @@ AUX dirsrv.initd 2444 RMD160 98c94e90bcce879360e015b15e8f01c9a5ed7056 SHA1 12c25
 DIST 389-ds-base-1.2.5.tar.bz2 2791116 RMD160 7bc4af77a66f19f1ee5ea2dfe6678e0d4b09993f SHA1 40340cdf1d1816c5a6b97acfb770c1f5ad6f7f4a SHA256 564fa7fb368d6b0dacd9b237aa515a48f57ae7395f191ba17867a5506cdc0a43
 DIST 389-ds-base-1.2.6.rc2.tar.bz2 2867753 RMD160 4f0daa5c47b91d46006dff3811749b83b795dca3 SHA1 7a9c8e577dcec1e0d485b08f9ccbe18d26e4f430 SHA256 d9fd7d84c9cc9565bcf8837dd437519aad846231827e8c4a1053a6fb0d5675ff
 EBUILD 389-ds-base-1.2.5.ebuild 2918 RMD160 c855002d65617c5a24d9721382ddb0ae64bc284e SHA1 0b2fd59fd9c3f86e512977df9f67a1884a48df47 SHA256 539f66d017f7f026b513270a99617e3282154f0b2cf09c1520404737e52def46
+EBUILD 389-ds-base-1.2.6_rc2-r1.ebuild 4085 RMD160 b831ecf556235d5bc8dd198108f13a1bd25b0693 SHA1 2ed8a320a194d587459dc4bb4558cfbfc96fce57 SHA256 fd400ab217fc3c521a83d7ffb2fefc99250321ae02c0996f7211e963e0d0924a
 EBUILD 389-ds-base-1.2.6_rc2.ebuild 3953 RMD160 a2264c7288dcd9dc107478412c19521cffc99e0d SHA1 6c47a6d7a1534591264ebd65092a92e623f7eafe SHA256 be57aeb6abb0791bd2407956f12e051e7bdc99a41dab1d675fc9a1bd6f60f228
-MISC ChangeLog 4242 RMD160 3c438661eb11519e0feede61ef9893e165b060c2 SHA1 ed061104c26c5c762ac020a95f4f9559d56a69d4 SHA256 82335e93c6bf8bc813fe893996a3169b33e7f8fbb551a54285f9d0fbf79e6a62
+MISC ChangeLog 4404 RMD160 753e5216e3212a6787044bfcccaeb595e4d7c3dc SHA1 89ae6b8917bb0f95973e01728d74730c31c37bd7 SHA256 0aaf5b546c9c5f314794ce905d3080d44aefc3eab93785992241738c1a3365f0
 MISC metadata.xml 1184 RMD160 2a20686dd0bf46fc91567041430659699a24ab27 SHA1 a0f1e8fadfc1f0e91deab05fd4f9efba3a33e398 SHA256 222f5d5797a314c2f691dfb298d19ff85cfa61752db31a3204f84e345ab8b1f5
